--- a/src/portal/lib/src/config/registry-config.component.html
+++ b/src/portal/lib/src/config/registry-config.component.html
@@ -17,6 +17,7 @@
         <button id="config-gc" clrTabLink>{{'CONFIG.GC' | translate}}</button>
         <clr-tab-content id="gc" *clrIfActive>
             <gc-config #gcConfig></gc-config>
+            <gc-history></gc-history>
         </clr-tab-content>
     </clr-tab>
 </clr-tabs>
